--- a/05reels.css
+++ b/05reels.css
@@ -30,7 +30,7 @@
   align-items: center;
   width: 100%;
   padding: 60px 0 70px 0; 
-  background-color: #F5F5FF;
+  background-color: #eaeafc;
   overflow: hidden;
 }
 .reels-container {
