--- a/02event.css
+++ b/02event.css
@@ -86,6 +86,12 @@
 .event-section-box3-text {
   font-family:'GangwonEduPowerExtraBoldA', "Jua", "Black Han Sans", sans-serif;
   font-size: 1.2rem;
-  line-height: 1.2;
+  line-height: 1.4;
   margin: 40px 0 80px 0;
+}
+
+.discount {
+  font-family:'GangwonEduPowerExtraBoldA', "Jua", "Black Han Sans", sans-serif;
+  font-size: 1.5rem;
+  color: #7257b6;
 }
