--- a/07notice.css
+++ b/07notice.css
@@ -26,7 +26,7 @@
   text-align: center;
   align-items: center;
   width: 100%;
-  margin: 60px 0;
+  margin: 60px 0 100px;
 }
 .notice-header {
   display: flex;
