--- a/10stickybar.css
+++ b/10stickybar.css
@@ -62,6 +62,7 @@
   padding-top: 8px;
   display: inline-block;       /* 또는 block */
   line-height: 1.5;            /* 기본 1 또는 px로 지정도 가능 */
+  color: #000;
 }
 
 .insta-btn-wrapper {
