--- a/01hero.css
+++ b/01hero.css
@@ -142,6 +142,10 @@
   color: #fff;
 }
 
+.hot {
+  color: rgb(196, 66, 66);
+}
+
 /* --- 애니메이션 부분 (변경 없음) --- */
 .boingInUp {
   -webkit-animation-name: boingInUp;
