--- a/10stickybar.css
+++ b/10stickybar.css
@@ -80,6 +80,12 @@
   ;
 }
 
+.insta-link-wrapper {
+  font-family: 'GangwonEduPowerExtraBoldA','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none;
+  color: #000;
+}
+
 .insta-dm {
   font-family: 'GangwonEdu_OTFBoldA','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
