--- a/02event.css
+++ b/02event.css
@@ -26,7 +26,8 @@
   text-align: center;
   align-items: center;
   width: 100%;
-  margin-top: 60px;
+  margin-top: 100px;
+  margin-bottom: 60px;
 }
 .event-header {
   display: flex;
