--- a/02event.css
+++ b/02event.css
@@ -99,7 +99,7 @@
 
 .event-section-box4 {
   background-color: #fff1f1;
-  text-align: left;
+  text-align: center;
   width: 90%;
   max-width: 350px;
   padding: 35px 0 30px 20px;
