--- a/02event.css
+++ b/02event.css
@@ -27,7 +27,7 @@
   align-items: center;
   width: 100%;
   margin-top: 100px;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 .event-header {
   display: flex;
@@ -67,10 +67,10 @@
 }
 .event-section-box2 {
   background-color: #FFF1FA;
-  text-align: left;
+  text-align: center;
   width: 90%;
   max-width: 350px;
-  padding: 35px 0 30px 20px;
+  padding: 35px 0 30px 0px;
   border-radius: 20px;
 }
 .event-section-title {
@@ -88,7 +88,7 @@
   font-family:'GangwonEduPowerExtraBoldA', "Jua", "Black Han Sans", sans-serif;
   font-size: 1.2rem;
   line-height: 1.4;
-  margin: 40px 0 50px 0;
+  margin: 40px 0 0 0;
 }
 
 .discount {
@@ -122,4 +122,9 @@
     font-size: 24px;
     font-weight: bold;
     color: #bd4c4c;
+}
+
+.price img {
+  width: 50%;
+  margin-top: 20px;
 }
